Name: dropbox-sdk
Version: 0.3.1
Synopsis: A library to access the Dropbox HTTP API.
Description:
    A (very preliminary) library to access the Dropbox HTTP API:
    <https://www.dropbox.com/developers/reference/api>
License: MIT
License-File: License.txt
Author: Kannan Goundan <kannan@dropbox.com>
Maintainer: Kannan Goundan <kannan@dropbox.com>
Homepage: http://github.com/cakoose/dropbox-sdk-haskell
Category: Network APIs
Build-Type: Simple
Cabal-Version: >= 1.10
Extra-Source-Files: trusted-certs.crt

Library
    Build-Depends:
        base,
        blaze-builder,
        bytestring,
        case-insensitive,
        certificate,
        conduit,
        http-conduit,
        http-types,
        HTTP,
        json,
        monad-control,
        network-uri,
        network,
        old-locale,
        pem,
        resourcet,
        template-haskell,
        time,
        tls-extra,
        tls,
        transformers,
        urlencoded,
        utf8-string
    HS-Source-Dirs: Source
    Exposed-Modules: Dropbox, Dropbox.Certificates, Dropbox.Certificates.TH
    GHC-Options: -Wall -fno-warn-missing-signatures -fno-warn-name-shadowing -fwarn-unused-imports
    Default-Language: Haskell2010
    Default-Extensions: OverloadedStrings, ScopedTypeVariables, Rank2Types

Source-Repository head
    Type: git
    Location: git://github.com/cakoose/dropbox-sdk-haskell.git
